<resources>
    <string name="app_name">CalendarMobile</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>


    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
</resources>
